--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Love Calculator ❤️ — Calculate your love</title>
   <meta name="description" content="A fun and romantic Love Calculator web app that calculates love score based on names.">
-  <meta name="keywords" content="Love Calculator, love score, romantic app, name match, HTML CSS JavaScript">
+  <meta name="keywords" content="Love Calculator, love score, romantic app, name match, love ,  HTML CSS JavaScript">
   <meta name="author" content="All Bayjid (Bogglo)">
   <meta property="og:title" content="Love Calculator ❤️ — Calculate your love">
   <meta property="og:description" content="Playful web app to calculate love score based on names.">
