--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Love Calculator ❤️ — Calculate your love</title>
   <meta name="description" content="A fun and romantic Love Calculator web app that calculates love score based on names.">
-  <meta name="keywords" content="Love Calculator, love score, romantic app, name match, love ,  HTML CSS JavaScript">
-  <meta name="author" content="All Bayjid (Bogglo)">
+  <meta name="keywords" content="Love Calculator, love score, romantic app, name match, HTML CSS JavaScript">
+  <meta name="author" content="All Bayjid Bishwash (Bogglo)">
   <meta property="og:title" content="Love Calculator ❤️ — Calculate your love">
   <meta property="og:description" content="Playful web app to calculate love score based on names.">
   <meta property="og:image" content="images/screenshot.jpg">
@@ -93,6 +93,36 @@
       0% { transform: translateY(100vh) scale(0.5); opacity: 1; }
       100% { transform: translateY(-10vh) scale(1); opacity: 0; }
     }
+
+    /* Footer styles and animation */
+    .footer-link {
+      position: fixed;
+      bottom: 10px;
+      width: 100%;
+      text-align: center;
+      font-size: 14px;
+      z-index: 10;
+    }
+
+    .footer-link a {
+      color: white;
+      text-decoration: none;
+      padding: 8px 16px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      animation: pulse 2s infinite;
+      transition: background 0.3s;
+    }
+
+    .footer-link a:hover {
+      background: rgba(255, 255, 255, 0.4);
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 0.8; }
+      50% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); opacity: 0.8; }
+    }
   </style>
 </head>
 <body>
@@ -153,6 +183,11 @@
       }, 30);
     }
   </script>
+
+  <!-- Footer with animated link -->
+  <footer class="footer-link">
+    <a href="https://bogglo.github.io/memory-game/" target="_blank">🎮 Play Memory Game</a>
+  </footer>
 
 </body>
 </html>
