--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Love Calculator ❤️ — Calculate your love</title>
   <meta name="description" content="A fun and romantic Love Calculator web app that calculates love score based on names.">
-  <meta name="keywords" content="Love Calculator, love score, romantic app, name match, HTML CSS JavaScript">
+  <meta name="keywords" content="Love Calculator, love score, 
+What is love ❤? ,  Love quotes  , What is love in a relationship , Love romance , Best definition of love , Love you , I love you , love calculator , love calculator name , love calculator prank , love calculator by name and date of birth , calculated love meaning , calculator love test , calculator love test games , love test , love tester , love test quiz , love tester online , love test name , love test game , love test app , love test calculator , love tester free romantic app, name match, HTML CSS JavaScript">
   <meta name="author" content="All Bayjid Bishwash (Bogglo)">
   <meta property="og:title" content="Love Calculator ❤️ — Calculate your love">
   <meta property="og:description" content="Playful web app to calculate love score based on names.">
